--- a/webtrack/webapp/templates/weather.html
+++ b/webtrack/webapp/templates/weather.html
@@ -20,7 +20,7 @@
           {% for item in news %}
             <li>
               <h3><a href="{{ item.url }}">{{ item.title }}</a></h3>
-              <h4>{{ item.published }}</h4>
+              <h4>{{ item.published.strftime('%d.%m.%Y') }}</h4>
             </li>
           {% endfor %}
         </ul>
