--- a/webtrack/webapp/templates/login.html
+++ b/webtrack/webapp/templates/login.html
@@ -12,33 +12,32 @@
 <body>
 <div class="container">
   <div class="row">
-    <div class="col-8">
-      <h1>News</h1>
-
-      {% if news %}
-        <ul>
-          {% for item in news %}
-            <li>
-              <h3><a href="{{ item.url }}">{{ item.title }}</a></h3>
-              <h4>{{ item.published.strftime('%d.%m.%Y') }}</h4>
-            </li>
-          {% endfor %}
-        </ul>
-      {% else %}
-        <p>Сервис новостей не доступен</p>
-      {% endif %}
-
-    </div>
+    <h1>{{ page_title }}</h1>
     <div class="col-4">
-      <h1>Weather</h1>
-      {% if weather %}
-    <ul>
-      <li>Temperature: {{ weather.temp_C }}</li>
-      <li>Humidity: {{ weather.humidity }}</li>
-    </ul>
-  {% else %}
-    <p>Сервис погоды не доступен</p>
-  {% endif %}
+
+      {% with messages = get_flashed_messages()  %}
+        {% if messages %}
+          <div class="alert alert-warning" role="alert">
+            {% for message in messages %}
+              {{ message }}
+            {% endfor %}
+
+          </div>
+        {% endif %}
+      {% endwith %}
+
+      <form action="{{ url_for('process_login') }}" method="post">
+        {{ form.hidden_tag() }}
+        <div class="form-group">
+          {{ form.username.label }}
+          {{ form.username() }}
+        </div>
+        <div class="form-group">
+          {{ form.password.label }}
+          {{ form.password() }}
+        </div>
+        {{ form.submit() }}
+      </form>
     </div>
   </div>
 </div>
